# fast-poisson-solver

./: .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: question.md
docs/: analyze.rst  conf.py  index.rst  interpolation.rst  numeric.rst  plotting.rst  solver.rst
examples/: testrun.py
fast_poisson_solver/: __init__.py  analyze.py  data.py  diff_matrices.py  model.py  numeric_solver.py  plotter.py  solver.py  utils.py
fast_poisson_solver/data_utils/: source_functions.py
resources/: infos.yaml
tests/: run_tests.py  test_analyze.py  test_dataclass.py  test_numeric.py  test_plotting.py  test_precompute.py  test_solve.py  test_solver.py  test_solverclass.py  testrun.py
