[tool.poetry]
name = "fast-poisson-solver"
version = "0.1.0"
description = ""
authors = ["Matthias Neuwirthgit <matthias_nwt@web.de>"]
readme = "README.md"
packages = [{include = "fast_poisson_solver"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
