[tool.poetry]
name = "fast-poisson-solver"
version = "0.1.12"
description = "A fast solver for the Poisson equation."
authors = ["Matthias Neuwirth"]
readme = "README.md"
packages = [{include = "fast_poisson_solver"}]
include = ["LICENSE", "README.md", "pyproject.toml", "fast-poisson-solver/resources/*"]
license = "GNUv3"
keywords = ["Poisson", "solver", "fast", "python"]
repository = "https://github.com/matthiasnwt/fast-poisson-solver"
documentation = "https://fast-poisson-solver.readthedocs.io/en/latest/"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Natural Language :: English",
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = ">=1.14"
scikit_learn = ">=0.24"
matplotlib = ">=3"
perlin_noise = ">=1.12"
PyYAML = ">=6.0"
scikit-image = ">=0.16"
scipy = ">=1.7"
numpydoc = "*"
torch = ">=1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

